cmake_minimum_required(VERSION 3.14)
project(Practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(DS-array-pair-sum DS/array-pair-sum.cpp)
add_executable(DS-array-leaders DS/array-leaders.cpp)
add_executable(DS-array-basic DS/array-basic.cpp)
add_executable(DS-array-reverse DS/array-reverse.cpp)
add_executable(Main main.cpp)